style/app.css
/* ... */
[data-page]:not([data-page="main"]) .cover figure img {
  animation-play-state: paused;
}

@keyframes move {
  0% {
    transform: scale(.5) translate3d( -12%, 12%, 0 )
  }
  50% {
    transform: scale(.5) translate3d( 12%, -12%, 0 )
  }
  100% {
    transform: scale(.5) translate3d( -12%, 12%, 0 )
  }
}



@media( min-width: 800px ) {

  .cover {
    left: 50%;
  }

  .cover figure img {
    transform: scale(.95) translate3d( -12%, 12%, 0 )
  }

  @keyframes move {
    0% {
      transform: scale(.95) translate3d( -12%, 12%, 0 )
    }
    50% {
      transform: scale(.95) translate3d( 12%, -12%, 0 )
    }
    100% {
      transform: scale(.95) translate3d( -12%, 12%, 0 )
    }
  }

  /*
  .cover figure img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  */

  .cover figcaption {
    display: flex;
  }

}


/* main */

.main {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  max-height: 100%;
  padding: 0 2.4rem 15.2rem;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.main::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  display: flex;
  height: 100vh;
  width: 100%;
  z-index: 1;
  background: linear-gradient(
    var( --dark-0 ),
    var( --dark-100 )
  );
}

.main .background {
  content: '';
  position: absolute;
  top: 100vh;
  right: 0;
  left: 0;
  bottom: 0;
  height: 0; /* JS */
  display: flex;
  background: var(--dark-100);
  width: 100%;
  z-index: 1;
}

.main > article,
.main > nav,
.main > footer {
  position: relative;
  max-width: 42rem;
  margin: 0 auto;
  z-index: 2;
}

.above-the-fold {
  display: flex;
  flex-direction: column;
}

.intro {
  margin-top: 10vh;
}

.intro h1 {
  max-width: 36rem;
}

.dates {
  opacity: .66;
  margin-bottom: 4.8rem;
}

.dates small.notes {
  color: var(--light-33);
}

.lead,
.button.scroll-down {
  display: none;
}

.brands-wrapper {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 6.4rem;
  margin: 1.6rem 0;
}

@media (min-width: 800px) and (min-height: 640px) {

  .above-the-fold {
    height: 100vh;
    justify-content: space-between;
    margin-bottom: 4.8rem;
  }

  .above-the-fold::after {
    content: '';
    display: flex;
    width: 100%;
    height: 6.4rem;
    margin-bottom: 4.8rem;
    flex-shrink: 0;
  }

  .intro {
    margin-top: 0;
  }

  .lead {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .button.scroll-down {
    display: flex;
    padding-right: 0;
    padding-left: 0;
    color: var(--light-33);
  }

  .dates {
    margin-bottom: 0;
  }

  .brands-wrapper {
    margin: 4.8rem 0 0;
  }

}

@media (min-width: 800px) and (min-height: 800px) {

  .above-the-fold,
  .above-the-fold::after {
    margin-bottom: 9.6rem;
  }

  .brands-wrapper {
    margin-top: 9.6rem 0 0;
  }

}

.brands,
.brands a {
  display: flex;
}

.brands a {
  border: none;
}

.pipe {
  content: '';
  display: flex;
  height: 3.2rem;
  min-width: .1rem;
  margin: 0 1.6rem;
  background: var(--light-50);
}

.brands a:first-child img {
  width: 8rem;
  align-self: center;
}

.brands a:last-child img {
  width: 19.2rem;
  align-self: center;
}

dl::before {
  content: '';
  display: flex;
  width: 100%;
  height: .1rem;
  margin: 4.8rem 0;
  background: var(--light-25);
}

dl > div + div {
  margin-top: calc( 1.8rem * 1.5 );
}

dt {
  font-size: 1.4rem;
  color: var(--light-50);
  line-height: calc( 1.8rem * 1.5 );
}

.main > article footer {
  margin-top: 6.4rem;
}

.main nav {
  display: flex;
  margin: 9.6rem auto;
  color: var(--light-50);
  visibility: hidden;
}

.main nav span.button {
  margin-left: -2.4rem;
  cursor: default;
}

.main .lead .material-icons {
  color: var(--light-50);
}

@media( min-width: 800px ) {

  .brands {
    /* margin-top: 19.6rem; */
  }

  .main {
    padding-right: calc( 50vw + 4.8rem );
    padding-left: 4.8rem;
  }

  .main::before {
    display: none;
  }

  .main .background {
    display: none;
  }

}



/* search */

input,
input[type=text],
input[type=search],
label,
button,
fieldset {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
	margin:0;
	border:0;
  border-radius: 0;
	padding:0;
	display:inline-block;
	vertical-align:middle;
	white-space:normal;
	background:none;
	line-height: 1.5;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

input[type=search]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type=search]::-ms-reveal {
  display: none;
  width : 0;
  height: 0;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

form {
  background: var(--light-100);
  border-radius: 1.6rem 1.6rem 0 0;
  width: 100%;
  max-width: 42rem;
  overflow: hidden;
  pointer-events: all;
  box-shadow: 0 0 4.8rem var(--dark-100);
}

form > * {
  width: 100%;
  max-width: 100%;
}

fieldset {
  min-width: 0;
  width: 100%;
}

input:focus,
input[type=text]:focus,
input[type=search]:focus,
button {
	outline:0;
}

::-webkit-search-decoration {
	display:none;
}

.search {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  /* align-items: flex-end; */
  align-items: center;
  pointer-events: none;
  z-index: 2;
  padding: 0 1.2rem;
}

.search .suggestions {
  /* display: none; */
}

.suggestions button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 6.4rem;
  padding: .8rem 2.4rem;
  font-size: 1.4rem;
}

.suggestions button:hover {
  cursor: pointer;
  background: var(--dark-05);
}

.suggestions button span {
  display: flex;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  pointer-events: none;
}
/* ... */

